--- a/.github/workflows/neocities.yml
+++ b/.github/workflows/neocities.yml
@@ -22,7 +22,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: 12
-    - name: Install deps and build
+    - name: sacredheartwitch
       run: |
         npm i
         npm run build
