--- a/.github/workflows/neocities.yml
+++ b/.github/workflows/neocities.yml
@@ -28,8 +28,8 @@ jobs:
         npm run build
     # When the dist_dir is ready, deploy it to neocities
     - name: Deploy to neocities
-      uses: bcomnes/deploy-to-neocities@v1
+      uses: bcomnes/deploy-to-neocities@main
       with:
         api_token: ${{ secrets.NEOCITIES_API_TOKEN }}
         cleanup: false
-        dist_dir: public
+        dist_dir: sacredheartwitch
