--- a/.github/workflows/deploy to neocities.yml
+++ b/.github/workflows/deploy to neocities.yml
@@ -1,6 +1,6 @@
 name: Deploy to neocities
 
-# only run on changes to master
+# only run on changes to main
 on:
   push:
     branches:
@@ -21,7 +21,7 @@ jobs:
     - name: Use Node.js
       uses: actions/setup-node@v1
       with:
-        node-version: 12
+        node-version: lts/*
     - name: Install deps and build
       run: |
         npm i
@@ -32,4 +32,4 @@ jobs:
       with:
         api_token: ${{ secrets.NEOCITIES_API_TOKEN }}
         cleanup: false
-        dist_dir: sacredheartwitch
+        dist_dir: public
